--- a/affiliate.html
+++ b/affiliate.html
@@ -20,7 +20,7 @@
 			font-family: outfit;
 		}
 		a, a:visited, a:active{
-			color: inherit;
+			color: #0072ff;
 			text-decoration: none;
 		}
 		#donation {
@@ -34,6 +34,10 @@
             padding: calc(30px * var(--scale)) 0;
             text-shadow: 0 calc(2px * var(--scale)) calc(2px * var(--scale)) #000;
 			width: 100%;
+		}
+		#donation a, #donation a:visited, #donation a:active{
+			color: #fff;
+			text-decoration: none;
 		}
 		#donation h1 {
 			font-size: calc(48px * var(--scale));
@@ -151,8 +155,8 @@
 		}
 		main iframe{
 			aspect-ratio: 16/9;
-			diplay: inline;
-			width: 49.8%;
+			display: inline;
+			width: 49.5%;
 		}
         main div ol{
             font-size: calc(20px * var(--scale));
@@ -191,6 +195,16 @@
 						loading="lazy" />
                 </a>
 			</div>
+			<script type="text/javascript">
+				atOptions = {
+					'key' : 'e8105a7670134344bc98b1ea9766961c',
+					'format' : 'iframe',
+					'height' : 60,
+					'width' : 468,
+					'params' : {}
+				};
+				document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+			</script>
 			<h2><a href="https://chromewebstore.google.com/detail/eanofdhdfbcalhflpbdipkjjkoimeeod/reviews/my-review" target="_blank" rel="noopener noreferrer">⚡ Following users consider updating review ⚡</a></h2>
 		</div>
 		<div id="users">
@@ -267,14 +281,15 @@
 						loading="lazy" />
                 </a>
 			</div>
-            <h2>Announcements & Updates (v1.3.8):</h2>
-            <h3>v1.3.8 has been launched for everyone</h3>
+            <h2>Announcements & Updates (v1.3.8): <a href="https://tmtechnomania.github.io/Bing-Search-Automator-Mobile-Edition/" target="_blank" rel="noopener noreferrer">Automate Your Mobile Searches</a></h2>
+			<h3>Mobile searches on desktop has been blocked by MS, Use this website on your phone to automate your searches: <a href="https://tmtechnomania.github.io/Bing-Search-Automator-Mobile-Edition/" target="_blank" rel="noopener noreferrer">Automate Your Mobile Searches</a></h3>
+            <p>v1.3.8 has been launched for everyone</p>
             <p>This update introduces a brand-new feature allowing you to toggle any tab between mobile and your regular desktop, enabling the use of a simulated mobile device for other websites. This functionality is especially useful for developers, providing a list of over 60+ different devices to choose from. It aids in debugging websites and testing mobile compatibility and responsiveness.</p>
 
             <h2>Still confused how to install and use the extension?</h2>
             <h3>Here is a step by step guide for you.</h3>
 			<iframe src="https://www.youtube.com/embed/5CU1gvnsaEg?si=88Gj0Cf5gxrLIuhc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-		<iframe src="https://www.youtube.com/embed/We1iXIlTuMo?si=2x_140udMgv5X2u2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/We1iXIlTuMo?si=2x_140udMgv5X2u2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div id="howto">
 				<!-- <div id="install"> -->
 					<h4>Installation and Setup:</h4>
@@ -366,6 +381,16 @@
 								</ul>
 							</li>
 						</ol>
+						<script type="text/javascript">
+							atOptions = {
+								'key' : 'e8105a7670134344bc98b1ea9766961c',
+								'format' : 'iframe',
+								'height' : 60,
+								'width' : 468,
+								'params' : {}
+							};
+							document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+						</script>
 					</details>
 					<details>
 						<summary>Popup Not Launching or Opening Install Page</summary>
@@ -383,6 +408,16 @@
 								</ul>
 							</li>
 						</ol>
+						<script type="text/javascript">
+							atOptions = {
+								'key' : 'e8105a7670134344bc98b1ea9766961c',
+								'format' : 'iframe',
+								'height' : 60,
+								'width' : 468,
+								'params' : {}
+							};
+							document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+						</script>
 					</details>
 					<details>
 							<summary>Points Not Collected on First Search</summary>
@@ -394,6 +429,16 @@
 									</ul>
 								</li>
 							</ol>
+							<script type="text/javascript">
+								atOptions = {
+									'key' : 'e8105a7670134344bc98b1ea9766961c',
+									'format' : 'iframe',
+									'height' : 60,
+									'width' : 468,
+									'params' : {}
+								};
+								document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+							</script>
 					</details>
 					<details>
 						<summary>Searches Are Not Performed</summary>
@@ -406,6 +451,16 @@
 								</ul>
 							</li>
 						</ol>
+						<script type="text/javascript">
+							atOptions = {
+								'key' : 'e8105a7670134344bc98b1ea9766961c',
+								'format' : 'iframe',
+								'height' : 60,
+								'width' : 468,
+								'params' : {}
+							};
+							document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+						</script>
 					</details>
 					<details>
 						<summary>Schedule Not Working</summary>
@@ -424,6 +479,16 @@
 								</ul>
 							</li>
 						</ol>
+						<script type="text/javascript">
+							atOptions = {
+								'key' : 'e8105a7670134344bc98b1ea9766961c',
+								'format' : 'iframe',
+								'height' : 60,
+								'width' : 468,
+								'params' : {}
+							};
+							document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+						</script>
 					</details>
                 <!-- </div> -->
             </div>
